# proposalminer

./: .dockerignore  .env.sample  .gitignore  Dockerfile  config.ini.sample  docker-compose.dev.yml  pyproject.toml  requirements.txt
etc_config/: cron_entrypoint.sh  entrypoint.sh
libs/: api.md  chemotion_api-0.3.6-py3-none-any.whl
proposal_miner/: __main__.py  app.py  chemotion_manager.py  config_manager.py  db_manager.py  proposal-overview.xls  proposal_manager.py  technologies.json  utils.py
proposal_miner/orm/: apps.py  clean.py  models.py
proposal_miner/orm/migrations/: 0001_initial.py  0002_alter_proposal_proposal_id.py  0002_alter_report_unique_together_report_synced_and_more.py  0003_remove_proposal_proposal_id.py  0004_proposal_research_plan_status_table.py
