[tool.poetry]
name = "proposalminer"
version = "0.1.0"
description = ""
authors = ["martin <m.starman@live.com>"]
readme = "README.md"

packages = [{include = "chemotion_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
chemotion-api = {path = "libs/chemotion_api-0.3.6.tar.gz"}
django = "^5.0.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
