[tool.poetry]
name = "proposalminer"
version = "0.1.0"
description = ""
authors = ["martin <m.starman@live.com>"]
readme = "README.md"

packages = [{include = "chemotion_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
chemotion-api = "^0.3.30"
django = "^5.0.6"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
xlrd = "^2.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
